Actualizacion de BETA | cambios: se retiro metodo de Getimage por fallo al inicar Ejecutable, generacion al 80% del jar | nota: El jar tiene fallos en la generacion de reportes, Error: ruta no espeificada del reporte